# sp5n

./: .gitignore  README.md  justfile  pyproject.toml
7oom/: README.md
charkha/: bend.py  hexes.py  petal.py  tape.py  time.py  wheel.py  wire.py
design/: README.md  STATUS.md  agent-wheel.md  evdev-input.md  implementation-plan.md  pynput-input.md  shuttle-scope.md  shuttle-visualization.md  splice-wheel.md  tape-documents.md
sp5n/: README.md  bend.py  hexes.py  petal.py  tape.py  time.py  wheel.py
spec/: README.md  input.md  pentabased.md  tape.md  vision.md
tests/: test_bend.py  test_petal.py  test_tape.py  test_time.py  test_wheel.py
