[project]
name = "sp5n"
version = "0.1.0"
description = "a tool for streaming pentabased key input"
requires-python = ">=3.13"
authors = [{ name = "philetus", email = "philetus@gmail.com" }]
dependencies = []

[project.urls]
Source = "https://github.com/pentabased/sp5n"

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "ruff>=0.14.10", "ty>=0.0.7"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sp5n"]

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-import = "error"

[tool.ruff]
line-length = 80
target-version = "py313"
