[project]
name = "charkha"
version = "0.1.0"
description = "a shuttle wheel for collaborative tapestry authoring"
requires-python = ">=3.13"
authors = [{ name = "philetus", email = "philetus@gmail.com" }]
dependencies = ["evdev>=1.9"]

[project.urls]
Source = "https://github.com/pentabased/charkha"

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "ruff>=0.15.2", "ty>=0.0.18"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["charkha"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-import = "error"

[tool.ruff]
line-length = 80
target-version = "py313"
